--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,10 @@ language: php
 php:
   - '5.5'
   - '5.6'
-before_script:
+before_install:
+  - composer self-update
+install:
   - composer install
+script:
+  - phpunit tests/
+
