--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: php
 php:
-  - '5.5'
-  - '5.6'
-before_install:
-  - composer self-update
+    - '5.5'
+    - '5.6'
 install:
-  - composer install
-script:
-  - phpunit tests/ --bootstrap vendor/autoload.php
+    - composer install
+    - php vendor/autoload.php
+script: phpunit tests/ --bootstrap vendor/autoload.php
 
