--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,12 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"ArikCrypto\\": "src/"
+			"": "src/"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"Tests\\": "tests/"
 		}
 	}
 }
