--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: php
 php:
     - '5.5'
     - '5.6'
-install:
-    - composer install
-    - php vendor/autoload.php
+    - '7.0'
+    - 'hhvm'
+install: composer install
 script: phpunit --bootstrap vendor/autoload.php tests/
 
