--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
 			"name": "Arik Sosman"
 		}
 	],
-	"require": {},
+	"require": {
+		"php": ">=5.3.0",
+		"ext-mcrypt": "*"
+	},
 	"require-dev": {
 		"phpunit/phpunit": "4.0.*"
 	},
